--- a/package.json
+++ b/package.json
@@ -5,15 +5,52 @@
   "main": "src/app.js",
   "dependencies": {
     "@solana/web3.js": "^0.90.1",
+    "body-parser": "^1.19.0",
+    "celebrate": "^13.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "event-dispatch": "^0.4.1",
+    "eventemitter3": "^4.0.7",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "reflect-metadata": "^0.1.13",
     "tslint": "^6.1.3",
-    "typescript": "^4.1.3"
+    "typedi": "^0.10.0",
+    "typescript": "^4.1.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "express": "^4.17.1"
+    "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.14",
+    "@types/lodash": "^4.14.161",
+    "@types/mongoose": "^5.7.36",
+    "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.2",
+    "ts-jest": "^26.4.0",
+    "ts-node": "^9.0.0",
+    "tslint": "^5.20.1",
+    "typescript": "^4.0.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf build/ && tsc",
+    "heroku-postbuild": "npm run build",
+    "start": "nodemon",
+    "inspect": "nodemon --inspect src/app.ts",
+    "test": "jest",
+    "lint": "npm run lint:js ",
+    "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
+    "lint:js": "npm run lint:eslint src/",
+    "lint:fix": "npm run lint:js -- --fix"
   },
   "repository": {
     "type": "git",
